fixed minor alignment issues of search bar and buttons

--- a/src/style.css
+++ b/src/style.css
@@ -18,20 +18,15 @@ P {
 .container {
   width: 60%;
 }
+.search-bar {
+  margin-left: 3%;
+  margin-right: 3%;
+  padding-top: 10px;
+}
 .weather-colour {
   background: white;
   border-radius: 0px 0px 170px 170px;
   box-shadow: 0px 0px 185px 100px #ffd561;
-}
-.search-bar {
-  display: block;
-  margin: 0 auto;
-  width: 60%;
-}
-.search-field {
-  display: inline-block;
-  width: 80%;
-  margin: 1% 0% 0% 3%;
 }
 .current-weather {
   display: inline-block;
